--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Build And Test Frontend
         run: |
           docker build -t temp-image -f ./frontend/Dockerfile.dev ./frontend
-          docker run temp-image npm lint
+          docker run temp-image npm run lint
